# sim

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build-release.yml  code-quality.yml
scripts/: build-debug.bat  build-debug32.bat  build-release.bat  build-release32.bat  clean-build-debug.bat  clean-build-debug32.bat  clean-build-release.bat  clean-build-release32.bat  clean.bat  generate-changelog.sh  lint.bat
src/: audio.cpp  audio.h  historyStorage.cpp  historyStorage.h  loggerSetup.cpp  loggerSetup.h  main.cpp  singleton.h  speech.cpp  speech.h  ui.cpp  ui.h  unsupportedVoicesFilter.h
